<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemViewActivityComida">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_info_comida"
            android:layout_width="@dimen/button_info_size"
            android:layout_height="@dimen/button_info_size"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_button_info"
            android:layout_marginEnd="@dimen/margin_button_info"
            android:background="@drawable/ic_info_blue" />

        <TextView
            android:id="@+id/comida_detalhe_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top_fragment"
            android:text="@string/teste_nome"
            android:textSize="@dimen/text_size_sub_titulos" />

        <ImageView
            android:id="@+id/comida_detalhe_image"
            android:layout_width="@dimen/image_detalhe_largura"
            android:layout_height="@dimen/image_detalhe_altura"
            android:layout_below="@+id/comida_detalhe_nome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top_fragment"
            android:src="@drawable/batata_doce"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/ingredientes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comida_detalhe_image"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_fragment"
            android:text="@string/ingredientes"
            android:textSize="@dimen/text_size_sub_titulos" />

        <TextView
            android:id="@+id/comida_detalhes_ingredientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredientes_text"
            android:layout_alignStart="@+id/ingredientes_text"
            android:layout_marginStart="@dimen/margin_ingredientes"
            android:layout_marginTop="@dimen/margin_top_text"
            android:text="@string/teste"
            android:textSize="@dimen/text_size_textos" />

        <TextView
            android:id="@+id/modo_de_preparo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comida_detalhes_ingredientes"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_ingredientes"
            android:layout_marginTop="@dimen/margin_top_text"
            android:text="@string/modo_de_preparo"
            android:textSize="@dimen/text_size_sub_titulos" />

        <TextView
            android:id="@+id/comida_detalhe_modo_de_preparo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/modo_de_preparo_text"
            android:layout_alignStart="@id/modo_de_preparo_text"
            android:layout_marginStart="@dimen/margin_ingredientes"
            android:layout_marginTop="@dimen/margin_top_text"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/teste"
            android:textSize="@dimen/text_size_textos" />
    </RelativeLayout>

</ScrollView>